--- a/fullpage-rwd-template/css/dwr-style.css
+++ b/fullpage-rwd-template/css/dwr-style.css
@@ -16,12 +16,50 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
-#section0{
-    background-image: url('/img/homepage.jpg');
+h1, h2, h3, h4, h5, h6 {
+    color: #ffffff;
 }
 
 @media (min-width:320px) {
     /* smartphones, iPhone, portrait 480x320 phones */
+
+    .section-container{
+        width: 85%;
+        margin: 0 auto;
+    }
+
+    /* Section 0 */
+    #section0 .logo{
+        width: 250px;
+    }
+    #section0{
+        background: url('../img/section0.jpg') no-repeat center center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+    }
+
+    /* Section 1 */
+    #section1{
+        /* http://www.cssmatic.com/gradient-generator */
+        background: rgba(182,202,210,1);
+        background: -moz-linear-gradient(top, rgba(182,202,210,1) 0%, rgba(142,197,215,1) 59%, rgba(66,138,189,1) 100%);
+        background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(182,202,210,1)), color-stop(59%, rgba(142,197,215,1)), color-stop(100%, rgba(66,138,189,1)));
+        background: -webkit-linear-gradient(top, rgba(182,202,210,1) 0%, rgba(142,197,215,1) 59%, rgba(66,138,189,1) 100%);
+        background: -o-linear-gradient(top, rgba(182,202,210,1) 0%, rgba(142,197,215,1) 59%, rgba(66,138,189,1) 100%);
+        background: -ms-linear-gradient(top, rgba(182,202,210,1) 0%, rgba(142,197,215,1) 59%, rgba(66,138,189,1) 100%);
+        background: linear-gradient(to bottom, rgba(182,202,210,1) 0%, rgba(142,197,215,1) 59%, rgba(66,138,189,1) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b6cad2', endColorstr='#428abd', GradientType=0 );
+    }
+    .team-mate {
+        width: 300px;
+        text-align: center;
+    }
+    .team-mate img{
+        width: 100px;
+    }
+
 }
 @media (min-width:481px) { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ }
 @media (min-width:641px) { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ }
