--- a/fullpage-rwd-template/css/dwr-style.css
+++ b/fullpage-rwd-template/css/dwr-style.css
@@ -19,6 +19,12 @@ table {
 h1, h2, h3, h4, h5, h6 {
     color: #ffffff;
 }
+.margin-top-100{
+    margin-top: 100px;
+}
+.clear-both{
+    clear: both;
+}
 
 @media (min-width:320px) {
     /* smartphones, iPhone, portrait 480x320 phones */
@@ -42,27 +48,87 @@ h1, h2, h3, h4, h5, h6 {
 
     /* Section 1 */
     #section1{
-        /* http://www.cssmatic.com/gradient-generator */
-        background: rgba(182,202,210,1);
-        background: -moz-linear-gradient(top, rgba(182,202,210,1) 0%, rgba(142,197,215,1) 59%, rgba(66,138,189,1) 100%);
-        background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(182,202,210,1)), color-stop(59%, rgba(142,197,215,1)), color-stop(100%, rgba(66,138,189,1)));
-        background: -webkit-linear-gradient(top, rgba(182,202,210,1) 0%, rgba(142,197,215,1) 59%, rgba(66,138,189,1) 100%);
-        background: -o-linear-gradient(top, rgba(182,202,210,1) 0%, rgba(142,197,215,1) 59%, rgba(66,138,189,1) 100%);
-        background: -ms-linear-gradient(top, rgba(182,202,210,1) 0%, rgba(142,197,215,1) 59%, rgba(66,138,189,1) 100%);
-        background: linear-gradient(to bottom, rgba(182,202,210,1) 0%, rgba(142,197,215,1) 59%, rgba(66,138,189,1) 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b6cad2', endColorstr='#428abd', GradientType=0 );
+        background: url('../img/section1a.jpg') no-repeat center center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+
+    }
+    .team{
+        width: 270px;
+        margin: 0 auto;
     }
     .team-mate {
-        width: 300px;
+        /* http://www.cssmatic.com/gradient-generator */
+        border-radius: 121px 49px 49px 49px;
+        -moz-border-radius: 121px 49px 49px 49px;
+        -webkit-border-radius: 121px 49px 49px 49px;
+        border: 4px solid #ffffff;
+
+        background: rgba(255,255,255,1);
+        background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+        background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(47%, rgba(246,246,246,1)), color-stop(100%, rgba(237,237,237,1)));
+        background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+        background: -o-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+        background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+        background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=0 );
+
+        width: 20%;
+        min-width: 270px;
+        max-width: 450px;
+        margin: 35px auto;
         text-align: center;
+    }
+    .team-mate.first{
+        margin-top: 85px;
+    }
+    .team-mate h2 {
+        padding-top: 35px;
+        color: #4076BC;
     }
     .team-mate img{
         width: 100px;
     }
+    .team-mate p{
+        color: #5c5c5c;
+        line-height: 18px;
+        width: 80%;
+        margin: 20px auto;
+    }
+    .team-mate p.short-description{
+        font-weight: 700;
+        min-height: 80px;
+    }
+    .team-mate p.long-description{
+        font-weight: 200;
+        text-align: justify;
+        min-height: 180px;
+    }
 
 }
 @media (min-width:481px) { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ }
-@media (min-width:641px) { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ }
-@media (min-width:961px) { /* tablet, landscape iPad, lo-res laptops ands desktops */ }
+@media (min-width:641px) {
+    /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
+    .team{
+        width: 640px;
+    }
+    .team-mate{
+        margin-top: 25px;
+        float: left;
+    }
+    .team-mate.first{
+        margin-top: 25px;
+    }
+
+}
+@media (min-width:961px) {
+    /* tablet, landscape iPad, lo-res laptops ands desktops */
+    .team{
+        width: 960px;
+    }
+
+}
 @media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
 @media (min-width:1281px) { /* hi-res laptops and desktops */ }
