--- a/fullpage-rwd-template/css/dwr-style.css
+++ b/fullpage-rwd-template/css/dwr-style.css
@@ -23,8 +23,31 @@ h1, h2, h3, h4, h5, h6 {
 .clear-both{
     clear: both;
 }
+/* Backgounds */
+.full-background {
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+.mac-laptop-background{background: url('../img/mac-laptop.jpg') no-repeat center center fixed;}
+.code-background{background: url('../img/code.jpg') no-repeat center center fixed;}
+.keyboard-background{background: url('../img/keyboard.jpg') no-repeat center center fixed;}
+.mobile-background{background: url('../img/mobile.jpg') no-repeat center center fixed;}
+.silicon-chips-background{background: url('../img/silicon-chips.jpg') no-repeat center center fixed;}
+.social-icons-background{background: url('../img/social-icons.jpg') no-repeat center center fixed;}
+/* End of backgrounds */
 @media (min-width:0) {
     /* smartphones, iPhone, portrait 480x320 phones */
+
+    h1, h2, h3, h4 {
+        margin: 0;
+        padding: 0;
+    }
+    h1{font-size: 2.175em;}
+    h2{font-size: 1.775em;}
+    h3{font-size: 1.525em;}
+    h4{font-size: 1.325em;}
 
     /* Navigator bar */
     .navbar{
@@ -37,60 +60,71 @@ h1, h2, h3, h4, h5, h6 {
     .navbar-collapse{
         background-color: #ffffff;
     }
-    .section-container h1{
-        font-size: 1.975em;
-    }
-    .section-container h4{
-        font-size: 1.625em;
-        text-align: left;
+    .section-container{
+        width: 100%;
+        height: 100%;
     }
 
     /* Section 0 */
-    #section0{
-        background: url('../img/section0.jpg') no-repeat center center fixed;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-    }
     #section0 .section-container{
         width: 85%;
+        height: auto;
         margin: 0 auto;
     }
 
     #section0 .logo{
         width: 250px;
     }
+    #section0 h1,
+    #section0 h2,
+    #section0 h3,
     #section0 h4{
-        margin-top: 15px;
+        margin-top: 20px;
     }
 
     /* Squares */
-    .square-25{
-        background-color: #0b93d5;
-        height: 25%;
+    .grid{
+        width: 100%;
+        height: 100%;
+    }
+    .grid .cell-25{
+        display: table;
+        height: 400px;
+        width: 100%;
+        float: left;
     }
 
+    .grid .cell-25 h1,
+    .grid .cell-25 h2,
+    .grid .cell-25 h3,
+    .grid .cell-25 h4 {
+        display: table-cell;
+        vertical-align: middle;
+        text-align: center;
+    }
+}
+@media (min-width:481px) { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
+
+}
+@media (min-width:641px) { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
 
 
 }
-@media (min-width:481px) { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ }
-@media (min-width:641px) {
-    /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
-
-
-}
-@media (min-width:768px) {
-    /* bootstrap collapse points */
+@media (min-width:768px) { /* bootstrap collapse points */
     .navbar{
         background-color: #ffffff;
         border: none;
     }
 
 }
-@media (min-width:961px) {
-    /* tablet, landscape iPad, lo-res laptops ands desktops */
-
+@media (min-width:961px) { /* tablet, landscape iPad, lo-res laptops ands desktops */
+    #fullpage{
+        margin-top: 50px;
+    }
+    .grid .cell-25{
+        width: 50%;
+        height: calc(50% - 25px);
+    }
 
 }
 @media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
