--- a/fullpage-rwd-template/css/dwr-style.css
+++ b/fullpage-rwd-template/css/dwr-style.css
@@ -41,7 +41,6 @@ h1, h2, h3, h4, h5, h6 {
 .social-icons-background{background: url('../img/social-icons.jpg') no-repeat center center;}
 
 /* Efects*/
-
 .gradient-blue-light{
     background: rgba(255,255,255,1);
     background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 34%, rgba(195,219,247,1) 100%);
@@ -82,13 +81,14 @@ h1, h2, h3, h4, h5, h6 {
     .navbar{
         font-family: 'Ubuntu', sans-serif;
         font-size: 1.5em;
+        text-transform: uppercase;
         background-color: transparent;
         border: none;
     }
     .navbar-default .navbar-nav>.active>a,
     .navbar-default .navbar-nav>.active>a:focus,
     .navbar-default .navbar-nav>.active>a:hover{
-        background-color: #aad6ff;
+        background-color: #ebebeb;
     }
     .navbar-toggle{
         background-color: #ffffff;
@@ -102,12 +102,16 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     /* Section 0 */
+    #section0{
+        overflow: hidden;
+    }
     #section0 .section-container{
-        width: 85%;
         height: auto;
         margin: 0 auto;
     }
-
+    #homeVideo{
+        display: none;
+    }
     #section0 .logo{
         width: 250px;
     }
@@ -116,6 +120,13 @@ h1, h2, h3, h4, h5, h6 {
     #section0 h3,
     #section0 h4{
         margin-top: 20px;
+    }
+    #section0 .layer{
+        position: static;
+        width: 85%;
+        top: 35%;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     /* Grid */
@@ -215,5 +226,39 @@ h1, h2, h3, h4, h5, h6 {
         height: calc(50% - 25px);
     }
 }
-@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
+@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */
+    #section0 .layer {
+        position: absolute;
+        z-index: 5;
+        /* important for center - with margin-left/-right auto (inherit) */
+        left: 0;
+        right: 0;
+        /*
+         * Preventing flicker on some browsers
+         * See http://stackoverflow.com/a/36671466/1081396  or issue #183
+         */
+        -webkit-transform: translate3d(0,0,0);
+        -ms-transform: translate3d(0,0,0);
+        transform: translate3d(0,0,0);
+    }
+    #homeVideo{
+        display: block;
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        top:0;
+        right:0;
+        width: 100%;
+        height: 100%;
+        background-size: 100% 100%;
+        background-color: black; /* in case the video doesn't fit the whole page*/
+        background-position: center center;
+        /*background-size: contain;*/
+        object-fit: cover; /*cover video background */
+        filter: brightness(40%);
+        -webkit-filter: brightness(40%);
+        -moz-filter: brightness(40%);
+
+    }
+}
 @media (min-width:1281px) { /* hi-res laptops and desktops */ }
