--- a/user-profile-template/css/dwr-style.css
+++ b/user-profile-template/css/dwr-style.css
@@ -32,7 +32,18 @@ h1, h2, h3, h4, h5, h6 {
 .photo-container{text-align: center;}
 
 @media (min-width:0) { /* smartphones, iPhone, portrait 480x320 phones */
+
+    .user-profile {width: 320px; margin: 0 auto;}
+    .user-profile h1 {text-align: center;}
+    .user-profile .left-panel {float: none; margin: 0 auto}
+    .user-profile .right-panel {float: none; margin: 0 auto}
+
+    .photo-preview {position: relative;}
     .photo-preview img {border: 1px solid #8f8f8f;}
+    .photo-preview .edit-user-profile-photo {position: absolute; display: none; top: 5px; left: 107px; opacity: 0.5;}
+    .photo-preview .edit-user-profile-photo:hover {opacity: 1;}
+
+
 }
 @media (min-width:481px) { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
 
@@ -47,7 +58,10 @@ h1, h2, h3, h4, h5, h6 {
 
 }
 @media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */
-
+    .user-profile {width: 1024px; margin: 0 auto;}
+    .user-profile h1 {text-align: center;}
+    .user-profile .left-panel {float: left; width: 30%; border-right: 2px solid #0b58a2}
+    .user-profile .right-panel {float: left; width: 70%; border-right: 2px solid #0b58a2}
 }
 @media (min-width:1281px) { /* hi-res laptops and desktops */
 
