--- a/user-profile-template/css/dwr-style.css
+++ b/user-profile-template/css/dwr-style.css
@@ -34,15 +34,34 @@ h1, h2, h3, h4, h5, h6 {
 @media (min-width:0) { /* smartphones, iPhone, portrait 480x320 phones */
 
     .user-profile {width: 320px; margin: 0 auto;}
-    .user-profile h1 {text-align: center;}
+    .user-profile h1 {text-align: center; padding-bottom: 50px;}
     .user-profile .left-panel {float: none; margin: 0 auto}
     .user-profile .right-panel {float: none; margin: 0 auto}
 
-    .photo-preview {position: relative;}
+    .user-profile input[type="file"] {display: none;}
+    .user-profile .photo-input {padding: 15px 0;}
+    .user-profile .file-upload {
+        font-family: "Open Sans",sans-serif;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 20px;
+        color: #333333;
+        border: 1px solid #ccc;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        border-radius: 5px;
+        display: inline-block;
+        padding: 10px 20px;
+        cursor: pointer;
+    }
+
+    .user-profile .bootstrap-select:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {width: 100%}
+
+    .photo-preview {position: relative; margin-top: 16px;}
     .photo-preview img {border: 1px solid #8f8f8f;}
     .photo-preview .edit-user-profile-photo {position: absolute; display: none; top: 5px; left: 107px; opacity: 0.5;}
     .photo-preview .edit-user-profile-photo:hover {opacity: 1;}
-
 
 }
 @media (min-width:481px) { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
@@ -58,10 +77,12 @@ h1, h2, h3, h4, h5, h6 {
 
 }
 @media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */
-    .user-profile {width: 1024px; margin: 0 auto;}
-    .user-profile h1 {text-align: center;}
+    .user-profile {width: 1024px;}
     .user-profile .left-panel {float: left; width: 30%; border-right: 2px solid #0b58a2}
     .user-profile .right-panel {float: left; width: 70%; border-right: 2px solid #0b58a2}
+
+    .user-profile .right-panel .form-group {width: 80%; margin-left: 5%;}
+    .user-profile .left-panel .form-group {width: 80%;}
 }
 @media (min-width:1281px) { /* hi-res laptops and desktops */
 
