--- a/user-profile-template/css/dwr-style.css
+++ b/user-profile-template/css/dwr-style.css
@@ -63,6 +63,8 @@ h1, h2, h3, h4, h5, h6 {
     .photo-preview .edit-user-profile-photo {position: absolute; display: none; top: 5px; left: 107px; opacity: 0.5;}
     .photo-preview .edit-user-profile-photo:hover {opacity: 1;}
 
+    .user-profile .term-and-conditions {width: 90%; color: #5c5c5c; margin-top: 10px; line-height: 130%}
+
 }
 @media (min-width:481px) { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
 
@@ -78,11 +80,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */
     .user-profile {width: 1024px;}
-    .user-profile .left-panel {float: left; width: 30%; border-right: 2px solid #0b58a2}
-    .user-profile .right-panel {float: left; width: 70%; border-right: 2px solid #0b58a2}
 
-    .user-profile .right-panel .form-group {width: 80%; margin-left: 5%;}
+    .user-profile .left-panel {float: left; width: 30%; height: 500px; border-right: 2px solid #0b58a2}
+    .user-profile .right-panel {float: left; width: 70%; height: 500px; border-right: 2px solid #0b58a2}
+
+    .user-profile .right-panel .form-group {width: 80%; margin-left: 5%; }
     .user-profile .left-panel .form-group {width: 80%;}
+
+    .user-profile .term-and-conditions {width: 80%; color: #5c5c5c; margin-left: 5%; margin-top: 50px; line-height: 130%}
 }
 @media (min-width:1281px) { /* hi-res laptops and desktops */
 
